--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
   left: 0;
   width: 100%;
   height: 0.1em;
-  background-color: #404040;
+  background-color: black;
   opacity: 0;
   transition: opacity 300ms, transform 300ms;
 }
