--- a/app/globals.css
+++ b/app/globals.css
@@ -51,3 +51,77 @@
     rgb(29, 29, 29) 100%
   );
 }
+
+/* .play-btn {
+  animation: shadowPulse 1.3s infinite linear;
+}
+.play-btn::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: #fff solid 2px;
+  border-radius: 100%;
+  animation: ringPulse 1.3s infinite linear;
+}
+
+@keyframes ringPulse {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  80%,
+  100% {
+    opacity: 0;
+    transform: scale(1.6);
+  }
+}
+
+@keyframes shadowPulse {
+  0% {
+    box-shadow: 0 0 8px 6px transparent, 0 0 0 0 transparent,
+      0 0 0 0 transparent;
+  }
+
+  10% {
+    box-shadow: 0 0 8px 6px #f3c23c, 0 0 12px 10px transparent,
+      0 0 12px 5px #f3c23c;
+  }
+
+  80%,
+  100% {
+    box-shadow: 0 0 8px 6px transparent, 0 0 0 27px transparent,
+      0 0 0 27px transparent;
+  }
+} */
+
+.play-btn:before,
+.play-btn:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: #f3c23c;
+  border-radius: 50%;
+  z-index: -1;
+  opacity: 0.7;
+}
+.play-btn:before {
+  animation: pulse 2s ease-out infinite;
+}
+.play-btn:after {
+  animation: pulse 2s 1s ease-out infinite;
+}
+@keyframes pulse {
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
